

                              Kiji Schema Release Notes

Version 1.0.0-rc4
  * SCHEMA-150. Update CLI tools to support composite entity IDs.
      Entity IDs can now be specified as:
        --entity-id=hbase=hex:deadc0de as hexadecimal HBase keys
        --entity-id=hbase=[utf8:]'hbase\x0akey\x00' as UTF-8 encoded HBase keys
        --entity-id=[kiji=]'kiji-key' for raw, hashed or hash-prefixed Kiji keys
        --entity-id="['component1', 2, 'comp3']" for Kiji formatted row keys.
  * SCHEMA-151. Stricter checking of layout "version" fields for compatibility
      with supported layout features. VersionInfo.get(Client/Cluster)DataVersion()
      now return a ProtocolVersion, not a string.
  * SCHEMA-3. Add support for composite entity ids. You can now create
      compound keys containing a mix of hashed, string, integer, and null
      components.
  * SCHEMA-175. kiji script can now use tools provided by kiji-mapreduce. To make
      kiji-mapreduce tools available for use through the kiji script, make sure
      the environment variable KIJI_MR_HOME is set to the path to a kiji-mapreduce
      distribution.
  * SCHEMA-153. Adds a getRegions() method to KijiTable. Returns logical
      region divisions in a kiji table.
  * SCHEMA-119. Remove TableLayoutSerializer class.
  * SCHEMA-147. Hide OperatorRowFilter. You should use AndRowFilter or
      OrRowFilter directly.
  * SCHEMA-118. KijiTableLayout constructors are now hidden. Create a new layout
      with KijiTableLayout.newLayout(TableLayoutDesc) or create one updated from
      an old one with KijiTableLayout.createUpdatedLayout(TableLayoutDesc,
      KijiTableLayout).
  * SCHEMA-10. CLI tools use KijiURIs:
      - "kiji ls" flags --instances and --table are remove and inferred
        from URI in --kiji=kiji://...
      - flag --table is no longer; it is superseeded by the table component
        from Kiji URIs.
  * SCHEMA-123. Removed spin-wait from deleteTable in HBaseKiji.