@@ -16,4 +16,4 @@
 #   limitations under the License.
 
 # These are the default key/value pairs stored in the kiji-system table on install.
-data-version = kiji-1.0
+data-version = system-1.0
